WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31814
Inconsistent use of counterName and identifier in CSS counter code and loss of information about the counter type.
https://bugs.webkit.org/show_bug.cgi?id=31814
Summary
Inconsistent use of counterName and identifier in CSS counter code and loss o...
Carol Szabo
Reported
2009-11-23 15:57:06 PST
Patch coming soon.
Attachments
Proposed Patch
(10.98 KB, patch)
2009-12-09 18:11 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2009-12-09 18:11:30 PST
Created
attachment 44587
[details]
Proposed Patch Added accessors and members to the CounterNode class to differentiate between reset type nodes and nodes that act as reset because they are not in the scope of any other counter node with the same identifier. This is useful in reevaluating the values of counters when new counters are added to the DOM that may make a root node non-root. Changed references to counterName to identifier for consistency.
WebKit Review Bot
Comment 2
2009-12-09 18:14:53 PST
style-queue ran check-webkit-style on
attachment 44587
[details]
without any errors.
Darin Adler
Comment 3
2009-12-21 12:03:42 PST
Comment on
attachment 44587
[details]
Proposed Patch
> + // identifier must match the identifier of this counter. > void removeChild(CounterNode*, const AtomicString& identifier);
The comment here is worded strangely. You say it must match. That makes it sound like it's a programming mistake if I pass an identifier that does not match. I don't think that's how it works. Maybe this wording: "Does nothing unless the identifier matches the identifier of the counter." Or maybe you can think of something better. r=me
WebKit Commit Bot
Comment 4
2009-12-21 12:11:55 PST
Comment on
attachment 44587
[details]
Proposed Patch Clearing flags on attachment: 44587 Committed
r52450
: <
http://trac.webkit.org/changeset/52450
>
WebKit Commit Bot
Comment 5
2009-12-21 12:12:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug